// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Message component should render 1`] = `
<DocumentFragment>
  <div
    class="message message--info"
    role="status"
  >
    <div
      class="message__side-border"
    />
    <test-file-stub
      height="1.125em"
      width="1.125em"
    />
    <section
      class="message__content"
    >
      <small>
        <div>
          Some content
        </div>
      </small>
    </section>
  </div>
</DocumentFragment>
`;

exports[`Message component should render with a different level 1`] = `
<DocumentFragment>
  <div
    class="message message--failure"
    role="status"
  >
    <div
      class="message__side-border"
    />
    <test-file-stub
      height="1.125em"
      width="1.125em"
    />
    <section
      class="message__content"
    >
      <small>
        <div>
          Some content
        </div>
      </small>
    </section>
  </div>
</DocumentFragment>
`;

exports[`Message component should render with a subtitle 1`] = `
<DocumentFragment>
  <div
    class="message message--info"
    role="status"
  >
    <div
      class="message__side-border"
    />
    <test-file-stub
      height="1.125em"
      width="1.125em"
    />
    <section
      class="message__content"
    >
      <small>
        <div>
          Some content
        </div>
      </small>
    </section>
    <div
      class="message__subtitle"
    >
      <div>
        test
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Message component should render without default icon 1`] = `
<DocumentFragment>
  <div
    class="message message--info message--no-icon"
    role="status"
  >
    <div
      class="message__side-border"
    />
    <section
      class="message__content"
    >
      <small>
        <div>
          Some content
        </div>
      </small>
    </section>
  </div>
</DocumentFragment>
`;
